[gd_scene load_steps=8 format=3 uid="uid://c2vsuk8eqga4"]

[ext_resource type="PackedScene" uid="uid://ddeqnyksgfxxk" path="res://Nodes/GridManager.tscn" id="1_c3vev"]
[ext_resource type="Script" uid="uid://btbhq0gmhlc0l" path="res://Scripts/LevelRoot.gd" id="1_mu5sr"]
[ext_resource type="PackedScene" uid="uid://baemephc655cr" path="res://Nodes/Player.tscn" id="3_lw7f6"]
[ext_resource type="PackedScene" uid="uid://f6gga4nwudu6" path="res://Nodes/LevelManager.tscn" id="5_0mos2"]
[ext_resource type="PackedScene" uid="uid://da4wjqh02ykfc" path="res://Nodes/EnemyManager.tscn" id="5_lw7f6"]
[ext_resource type="Texture2D" uid="uid://dobuyqg6lvqr5" path="res://Art/grid.png" id="6_0mos2"]
[ext_resource type="Texture2D" uid="uid://b7tc42rxvnhsc" path="res://Art/shadow.png" id="6_667tg"]

[node name="LevelRoot" type="Node2D"]
script = ExtResource("1_mu5sr")

[node name="GridManager" parent="." instance=ExtResource("1_c3vev")]

[node name="LevelManager" parent="." instance=ExtResource("5_0mos2")]
position = Vector2(-1, 0)
scale = Vector2(2, 2)

[node name="EnemyManager" parent="." instance=ExtResource("5_lw7f6")]
position = Vector2(533, -301)

[node name="Player" parent="." instance=ExtResource("3_lw7f6")]

[node name="Shadow" type="Sprite2D" parent="Player"]
texture_filter = 1
position = Vector2(880, -880)
scale = Vector2(160, 160)
texture = ExtResource("6_667tg")

[node name="Grid4" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(223, 768)
scale = Vector2(32, 32)
texture = ExtResource("6_0mos2")

[node name="Grid5" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(735, 768)
scale = Vector2(32, 32)
texture = ExtResource("6_0mos2")

[node name="Grid6" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1247, 768)
scale = Vector2(32, 32)
texture = ExtResource("6_0mos2")

[node name="Grid" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(223, 256)
scale = Vector2(32, 32)
texture = ExtResource("6_0mos2")

[node name="Grid3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1247, 256)
scale = Vector2(32, 32)
texture = ExtResource("6_0mos2")

[node name="Grid2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(735, 256)
scale = Vector2(32, 32)
texture = ExtResource("6_0mos2")
